# poetry_demo

./: .bumpversion.cfg  .pre-commit-config.yaml  Dockerfile  pyproject.toml
poetry_demo/: __init__.py  main.py
