[tool.poetry]
name = "poetry_demo"
version = "0.1.0"
description = "Test package for using Poetry"
authors = ["Sander van Dorsten <sandervandorsten@gmail.com>"]
maintainers = ["Sander van Dorsten <sandervandorsten@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
pandas-stubs = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
my-script = "poetry_demo.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
